--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
         <div class="sidebar">
             <ul class="sidebar-nav">
-                <li><a href="#" id="salmon">BEAST PULSE</a></li>
-                <li><a href="#" id="monazite">BLOG POSTS</a></li>
+                <li><a href="#" id="salmon">SALMON</a></li>
+                <li><a href="#" id="monazite">MONAZITE</a></li>
                 <li><a href="#" id="links">LINKS</a></li>
             </ul>
         </div>
