--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SALMONAZITE</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="images/Solid_unicursal_hexagram.svg.png" type="image/x-icon">
 </head>
 
 <body>
