--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>SALMONAZITE</h1>
+    <a href="../index.html"><h1>SALMONAZITE</h1></a>
 
     <div class="container">
         <div class="main-content">
